--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: # [KonstantinosLaloudakis, NikosKoutroumanis]
-patreon: # Nikolaos-Spyridon Koutroumanis
+github: [KonstantinosLaloudakis, NikosKoutroumanis]
+patreon: Nikolaos-Spyridon Koutroumanis
